apply plugin: 'com.android.application'

android {
    compileSdkVersion 28
    defaultConfig {
        applicationId "com.example.base_station_game"
        minSdkVersion 21
        targetSdkVersion 28
        versionCode 1
        versionName "1.0"
        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
    }
    buildTypes {
        debug {
            buildConfigField 'String', "ApiKey", MyAwesomeApp_ApiKey
            resValue 'string', "api_key", MyAwesomeApp_ApiKey
        }
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            buildConfigField 'String', "ApiKey", MyAwesomeApp_ApiKey
            resValue 'string', "api_key", MyAwesomeApp_ApiKey
        }

    }
    compileOptions {
        sourceCompatibility = '1.8'
        targetCompatibility = '1.8'
    }
}

dependencies {

    implementation fileTree(dir: 'libs', include: ['*.jar'])
    implementation 'com.android.support:appcompat-v7:28.0.0'
    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
    implementation 'com.android.support:cardview-v7:28.0.0'
    implementation 'com.android.support:recyclerview-v7:28.0.0'
    implementation 'org.osmdroid:osmdroid-android:6.1.0'
    implementation 'com.google.firebase:firebase-database:16.0.1'
    implementation 'com.firebase:geofire-android:2.3.1'
    implementation "com.leinardi.android:speed-dial:2.0.1"

    implementation 'com.android.support:support-v4:28.0.0'
    testImplementation 'junit:junit:4.12'
    androidTestImplementation 'com.android.support.test:runner:1.0.2'
    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
    implementation 'com.google.firebase:firebase-core:16.0.8'

    implementation 'com.firebaseui:firebase-ui-auth:4.3.1'

    // Required only if Facebook login support is required
    // Find the latest Facebook SDK releases here: https://goo.gl/Ce5L94
    implementation 'com.facebook.android:facebook-android-sdk:4.41.0'

    // Required only if Twitter login support is required
    // Find the latest Twitter SDK releases here: https://goo.gl/E5wZvQ
    //implementation 'com.twitter.sdk.android:twitter-core:3.3'

    implementation 'com.android.support:design:28.0.0'
    implementation 'org.jetbrains:annotations:15.0'
    implementation 'com.google.firebase:firebase-messaging:17.6.0'
    implementation 'com.github.HITGIF:TextFieldBoxes:1.4.4'

    implementation fileTree(dir: 'libs', include: ['*.jar'])
    implementation(name: 'wikitudesdk', ext: 'aar')
    implementation 'com.android.support:appcompat-v7:28.0.0'
    implementation 'com.google.ar:core:1.1.0'
    implementation 'com.google.android.gms:play-services-location:16.0.0'
}


repositories {
    flatDir {
        dirs 'libs'
    }
}

apply plugin: 'com.google.gms.google-services'
